--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,5 @@ useDynLib(amisbanana)
 importFrom(Rcpp, evalCpp)
 importFrom("mnormt", rmt)
 import(methods)
-export(amisbanana)
+export(amisbanana, computedmixture)
 exportClasses("amispop", "amisparameter", "amisstrategy", "amiscriteria")
